crates/model/tests/compile_fail/model_duplicate_components.stderr
error: duplicate component name `Thing` — two components resolve to the same event enum variant
  --> tests/compile_fail/model_duplicate_components.rs:20:9
   |
20 |         Thing,
   |         ^^^^^
